# MaEngine

./: .gitignore  CMakeLists.txt  MaEngine.sln  README.md
Empty/: 111.h  CMakeLists.txt  EmptyApplication.cpp  WindowsApplication.cpp  WindowsApplication.h
Framework/Common/: Allocator.cpp  Allocator.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  GfxConfiguration.h  MemoryManager.cpp  MemoryManager.h  main.cpp
Framework/Interface/: Interface.h
MaEngine/: MaEngine.props  MaEngine.vcxproj  MaEngine.vcxproj.filters  MaEngineDef.h  ispcCreate.py  stdafx.cpp
MaEngine/Framework/Common/: Allocator.cpp  Allocator.h  AssetLoader.h  BaseApplication.cpp  BaseApplication.h  Buffer.h  Config.h  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.h  MemoryManager.cpp  MemoryManager.h  geommath.h  main.cpp  portable.h
MaEngine/Framework/GeoMath/: CCMath.h  geommath.h
MaEngine/Framework/Interface/: IApplication .h  IMemoryManager.h  IRuntimeModule.h  Interface.h
MaEngine/Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp  EmptyApplication.h
MaEngine/Platform/Linux/: CMakeLists.txt  XcbApplication.cpp  XcbApplication.h  helloengine_xcb.c
MaEngine/Platform/MaEngine-win32/: MaEngine-win32.cpp  MaEngine-win32.vcxproj  stdafx.cpp
MaEngine/Platform/Windows/: CMakeLists.txt  WindowsApplication.cpp  WindowsApplication.h  helloengine_win.c
Platform/MaEngine-win32/: MaEngine-win32.cpp  MaEngine-win32.vcxproj  MaEngine-win32.vcxproj.filters
Platform/Windows/: helloengine_win.h
Vector2/: Vector2.vcxproj  stdafx.cpp  unittest1.cpp
(+36 files in other folders)
