#cmake_minimum_required(VERSION 3.9)
#project(MaEngine)
#set(CMAKE_CXX_STANDARD 11)
#add_executable(MaEngine src/Framework/Common/main.cpp src/Framework/Interface/Interface.h src/Framework/Interface/IRuntimeModule.h "src/Framework/Interface/IApplication .h" src/Framework/Common/BaseApplication.h src/Framework/Common/BaseApplication.cpp src/Empty/EmptyApolication.cpp)
cmake_minimum_required (VERSION 3.1)
set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 11)
project (MaEngine)
include_directories("${PROJECT_SOURCE_DIR}Framework/Common")
include_directories("${PROJECT_SOURCE_DIR}Framework/Interface")
add_subdirectory(Framework)
add_subdirectory(Empty)